Criando novas rotas da api
